# CulturedSwines-Bot

./: Cargo.toml  README.md  samarth2120.json
.cargo/: config.toml
src/: main.rs
