[package]
name = "suvar-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.19.0"
shuttle-runtime = { git = "https://github.com/Samarth1696/shuttle/tree/7f3769d7c2826bc17c23abe6f89f5a4448209228/service" }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-secrets = "0.19.0"
tokio = "1.26.0"
tracing = "0.1.37"
