[package]
name = "suvar-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.19.0"
shuttle-runtime = { version = "0.19.0" }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
reqwest = "0.11"
shuttle-secrets = "0.19.0"
tokio = "1.26.0"
tracing = "0.1.37"
serde_json = "1.0.99"
chatgpt_rs = "1.1.10"